# pico-webserver

./: .gitignore  CMakeLists.txt  CMakePresets.json
fs/: index.html
include/: encre_file.h  fsdata.h  tusb_lwip_glue.h
include/lwip/: lwipopts.h
src/: GDEP073E01.c  encre_file.c  tusb_lwip_glue.c  usb_descriptors.c  webserver.c
